--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,35 @@ body{
   background: var(--mainWhite);
 }
 /* REM values to target root element 1REM = 16px */
+
+/* Navbar */
+.navbar{
+  background: var(--mainWhite);
+}
+.navbar-icon{
+  font-size: 2rem;
+  color: var(--mainBlue);
+}
+.navbar-toggler{
+  outline-color: var(--mainBlue) !important;
+}
+.nav-link{
+  color: var(--mainBlack);
+  text-transform: capitalize;
+}
+.nav-link:hover{
+  
+  color: var(--mainBlue);
+
+}
+.nav-icon{
+  font-size: 1.5rem;
+  color: var(--mainBlue);
+  text-decoration: none !important;
+  transition-property: color;
+  text-rendering: 2s;
+  transition-timing-function: linear;
+}
+.nav-icon:hover{
+  color: var(--mainBlack);
+}
