--- a/css/main.css
+++ b/css/main.css
@@ -270,7 +270,7 @@ transition: all 1s ease-in-out;
   font-size: 1.5rem;
   text-transform: capitalize;
   background: transparent;
-  border-color: var(--mainYellow);
+  border-color : var(--mainYellow);
   color: var(--mainYellow)!important;
 }
 .contact-input::placeholder{
@@ -289,5 +289,79 @@ transition: all 1s ease-in-out;
   background: var(--mainYellow);
   border-color: var(--mainBlack);
 }
-
-
+/* Services Section */
+.services{
+  position: relative;
+  min-height: 85vh;
+  min-width: 95vw;
+  margin: 0 auto;
+  clip-path: polygon(0 10%,100% 0,100% 90%,0 100%);
+  }
+  .video-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -3;
+  }
+  .video-item{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .video-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--transparentBlue);
+    z-index: -2;
+  }
+  .service{
+    background: var(--mainBlack);
+    color: var(--mainWhite);
+    transition: all 1s ease-in-out;
+  }
+  .service:hover{
+    background: var(--mainWhite);
+    color: var(--mainBlack);
+    padding-left: 2.2rem!important;
+  }
+  .service-icon{
+    font-size: 4rem;
+    color: var(--mainYellow);
+  }
+  /*customer*/
+.customer-card-body{
+  margin-top: -4rem!important;
+  color: var(--mainGrey);
+}
+.customer-img{
+  border: 0.4rem solid var(--mainWhite);
+}
+.customer-name{
+  color: var(--mainBlue);
+  margin: 0.5rem;
+}
+.customer-icon{
+  font-size: 2rem;
+  color: var(--mainGrey);
+}
+.customer-quote{
+  max-width: 90%;
+}
+/*footer*/
+.footer{
+  background: var(--mainBlack);
+}
+.footer-icon{
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: var(--mainYellow);
+  transition: all 1s ease-in-out;
+}
+.footer-icon:hover{
+  color: var(--mainBlue);
+}
